--- a/station.html
+++ b/station.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <!-- jquery -->
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <!-- Chart.js -->
@@ -12,7 +13,18 @@
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
     <!-- Vue.js -->
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    
+    <script>
+      $(document).ready(function(){
+        $.ajax({
+          url:'serch.json',
+          type:'GET',
+          dataType:'json',
+          success:function(response){
+            console.log(response)
+          }
+        })
+      })
+    </script>
     <title>something</title>
 </head>
 <body>
@@ -73,5 +85,8 @@
             </div>     
     </div>
 </body>
+
+<!-- Jquery -->
+
 <script src="main.js"></script>
 </html>
