--- a/html/FishPond.html
+++ b/html/FishPond.html
@@ -8,17 +8,13 @@
     <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-
-    <!-- Chart.js -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.0.2/dist/chart.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
     <!-- Vue.js -->
     <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="./btncss/btn.css">
 	  <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script src=".//popvers.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.1/dist/umd/popper.min.js"></script>
+    <script src="../js/FishPond.js"></script>
+
     <script>
       $(document).ready(function(){
         $.ajax({
@@ -54,9 +50,11 @@
     </div>
     <div class = "container" >
         <div class="row">
-            <div class="col-lg-8 my-3" style="background-color: rgba(199, 199, 199, 0.623);">
-              <div onclick="Myfn()" class="btn rounded-3 m-3" style="background-image: url(./plus.PNG); width: 130px; height: 130px;"></div>
+            <div class="col-lg-8 my-3" id="FishPondList" style="background-color: rgba(199, 199, 199, 0.623); height: 100vh;">
+              <div onclick="Myfn()" class="btn rounded-3 m-3" style="background-image: url(../Img/plus.PNG); width: 130px; height: 130px;"></div>
+              
             </div>
+
             <div class="col-lg-4">
               <div class="row">
                 <div class="col-lg-12 m-3 border">
