--- a/html/FishPondSubmit.html
+++ b/html/FishPondSubmit.html
@@ -4,37 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- jquery -->
     <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <!-- Chart.js -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.0.2/dist/chart.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
-    <!-- Vue.js -->
     <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
 	  <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script src=".//popvers.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.1/dist/umd/popper.min.js"></script>
-    <script>
-      $(document).ready(function(){
-        $.ajax({
-          url:'serch.json',
-          type:'GET',
-          dataType:'json',
-          success:function(response){
-            console.log(response)
-          }
-        })
-      })
-    </script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="../js/FIshPondSubmit.js"></script>
     <title>something</title>
 </head>
 <body>
     <ul class="nav nav-tabs">
         <li class="nav-item">
-            <a class="nav-link" href="index.html">Index</a>
+            <a class="nav-link" href="">Index</a>
         </li>
         <li class="nav-item">
             <a class="nav-link active" href="station.html">Station1</a>
@@ -50,28 +30,15 @@
 
     <div class = "container">
         <div class="row">
-          <form action='res.php' method='post'>
-            <input name='name' type='text'>
-            <input name='submit' type='submit'>
-         
-            <div class="col-md-8">
-              <div class="mb-3">
-                <label for="exampleFormControlInput1" class="form-label">魚塭名稱</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" >
-              </div>
-              <div class="mb-3">
-                <label for="exampleFormControlTextarea1" class="form-label">感測器類型</label>
-                <input type="text" class="form-control" placeholder="例: pH、Temp、O2">
-              </div>
-              
-              <button type="button" class="btn btn-primary">註冊魚塭</button>
-          </form>
+          <div class="col-lg-6 border"> 
+            <label for="FishName" class="form-label m-3">註冊魚塭資料</label>
+            <div class="input-group mb-3">
+              <span class="input-group-text" id="basic-addon1">@</span>
+              <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+            </div>
+            <button type="button" class="btn btn-primary m-3 fs-5" id="FishSubmit">註冊魚塭</button>
           </div>
         </div>
     </div>
 </body>
-
-<!-- Jquery -->
-
-<script src="main.js"></script>
 </html>
